config: Updated vault configuration

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,6 +1,5 @@
 {
-  "vimMode": true,
   "attachmentFolderPath": "attachments",
-  "alwaysUpdateLinks": true,
-  "showLineNumber": false
+  "vimMode": true,
+  "alwaysUpdateLinks": true
 }
