--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,6 @@
 {
   "attachmentFolderPath": "attachments",
   "vimMode": true,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "showLineNumber": false
 }
